apps/pgadmin/pgadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  selector:
    matchLabels:
      app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4:9.14
          ports:
            - containerPort: 80
              name: pgadminport
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin-storage
      volumes:
        - name: pgadmin-storage
          persistentVolumeClaim:
            claimName: pgadmin-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
