apps/pgadmin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pgadmin
  namespace: pgadmin
  annotations:
    cert-manager.io/cluster-issuer: "custom-ca-issuer"
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($scheme = http) {
        return 301 https://$host:8443$request_uri;
      }
spec:
  ingressClassName: nginx-internal
  tls:
    - hosts:
        - pgadmin.kvlk.local
      secretName: pgadmin-tls
  rules:
    - host: "pgadmin.kvlk.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "pgadmin"
                port:
                  number: 80
